plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.4' apply( false)
    id 'io.spring.dependency-management' version '1.1.6' apply( false)
}

allprojects {
    group = 'git.dimitrikvirik'
    version = '0.0.1-SNAPSHOT'

    repositories {
        mavenCentral()
        mavenLocal()
    }
//
//    tasks.named('test') {
//        useJUnitPlatform()
//    }

    tasks.withType(JavaExec).tap {
        configureEach {
            jvmArgs('--add-opens=java.base/java.lang=ALL-UNNAMED')
        }
    }
    tasks.withType(JavaCompile).tap {
        configureEach {
            options.encoding = 'UTF-8'
            options.release = 21
            options.compilerArgs.addAll(['--add-exports=java.base/sun.nio.ch=ALL-UNNAMED'])
            sourceCompatibility = JavaVersion.VERSION_21
            targetCompatibility = JavaVersion.VERSION_21
        }
    }

}
subprojects {



    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }
}





